--- a/clientes-nuevo.html
+++ b/clientes-nuevo.html
@@ -64,6 +64,41 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
+                                            <label>Departamento</label>
+                                            <select class="form-control input-sm" title="Departamento" name="departamento">
+                                                <option selected>(Seleccione)</option>
+                                                <option>Amazonas</option>
+                                                <option>Lima</option>
+                                            </select>
+                                            <span class="help-block"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Provincia</label>
+                                            <select class="form-control input-sm" title="Provincia" name="provincia">
+                                                <option selected>(Seleccione)</option>
+                                                <option>Amazonas</option>
+                                                <option>Lima</option>
+                                            </select>
+                                            <span class="help-block"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Distrito</label>
+                                            <select class="form-control input-sm" title="Distrito" name="distrito">
+                                                <option selected>(Seleccione)</option>
+                                                <option>Amazonas</option>
+                                                <option>Lima</option>
+                                            </select>
+                                            <span class="help-block"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="form-group">
                                             <label>Direcci&oacute;n</label>
                                             <input type="text" class="form-control input-sm" placeholder="" title="Direcci&oacute;n" name="direccion">
                                             <span class="help-block"></span>
@@ -92,6 +127,17 @@
                                                 <span class="input-group-addon" id="sizing-addon3">@</span>
                                                 <input type="text" class="form-control" placeholder="Correo electr&oacute;nico" aria-describedby="sizing-addon3">
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Sexo</label>
+                                            <select class="form-control input-sm" title="Distrito" name="sexo">
+                                                <option selected>(Seleccione)</option>
+                                                <option>Femenino</option>
+                                                <option>Masculino</option>
+                                            </select>
+                                            <span class="help-block"></span>
                                         </div>
                                     </div>
                                 </div>
