--- a/clientes.html
+++ b/clientes.html
@@ -52,7 +52,8 @@
                                 <th class="text-center">Apellido Materno</th>
                                 <th class="text-center">Tipo de Documento</th>
                                 <th class="text-center">Sexo</th>
-                                <th class="text-center">Estado</th>
+                                <th class="text-center">Nº de Mascotas</th>
+                                <th class="text-center">Activo</th>
                                 <th class="text-center">Acci&oacute;n</th>
                             </tr>
                         </thead>
@@ -67,9 +68,12 @@
 								<td>Chaico</td>
                                 <td class="text-center">DNI</td>
                                 <td class="text-center">Masculino</td>
-                                <td class="text-center">Activo</td>
+                                <td class="text-center">5</td>
+                                <td class="text-center">
+                                    <input type="checkbox" name="checkeado" value="0">
+                                </td>
 								<td class="text-center">
-									<a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+									<a href="javascript:cargar('clientes-ver.html')" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
 								</td>
                             </tr>
                             <tr class="even">
@@ -82,9 +86,12 @@
                                 <td>Cabana</td>
                                 <td class="text-center">DNI</td>
                                 <td class="text-center">Femenino</td>
-                                <td class="text-center">Activo</td>
+                                <td class="text-center">3</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox" name="checkeado" value="0" checked>
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('clientes-ver.html')" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr>
                             <tr class="odd">
@@ -97,9 +104,12 @@
                                 <td>Le&oacute;n</td>
                                 <td class="text-center">DNI</td>
                                 <td class="text-center">Femenino</td>
-                                <td class="text-center">Activo</td>
+                                <td class="text-center">1</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox" name="checkeado" value="0" checked>
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('clientes-ver.html')" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr> 
                         </tbody>
