--- a/pacientes-nuevo.html
+++ b/pacientes-nuevo.html
@@ -20,20 +20,32 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Tipo Documento</label>
-                                            <select class="form-control input-sm" title="Tipo Documento" name="tipoDocumento">
+                                            <label>Nombre</label>
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombre" name="nombre">
+                                            <span class="help-block"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Categoria</label>
+                                            <select class="form-control input-sm" title="Categoria" name="categoria">
                                                 <option selected>(Seleccione)</option>
-                                                <option>DNI</option>
-                                                <option>CE</option>
-                                                <option>LE</option>
+                                                <option>Perro</option>
+                                                <option>Gato</option>
+                                                <option>Conejo</option>
                                             </select>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>N&uacute;mero Documento</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="N&uacute;mero Documento" name="nDocumento">
+                                            <label>Raza</label>
+                                            <select class="form-control input-sm" title="Raza" name="raza">
+                                                <option selected>(Seleccione)</option>
+                                                <option>Siberiano</option>
+                                                <option>Pitbull</option>
+                                                <option>Chino</option>
+                                            </select>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -41,31 +53,8 @@
 								<div class="row">
 									<div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Nombres</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombres" name="nombres">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Apellido Paterno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Paterno" name="apePaterno">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Apellido Materno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Materno" name="apeMaterno">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Direcci&oacute;n</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Direcci&oacute;n" name="direccion">
+                                            <label>Color</label>
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Color" name="color">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -76,21 +65,36 @@
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Peso</label>
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Peso" name="peso">
+                                            <span class="help-block"></span>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Tel&eacute;fono</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Tel&eacute;fono" name="telefono">
+                                            <label>Sexo</label>
+                                            <select class="form-control input-sm" title="Sexo" name="sexo">
+                                                <option selected>(Seleccione)</option>
+                                                <option>Hembra</option>
+                                                <option>Macho</option>
+                                            </select>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Email</label>
-                                            <div class="input-group input-group-sm">
-                                                <span class="input-group-addon" id="sizing-addon3">@</span>
-                                                <input type="text" class="form-control" placeholder="Correo electr&oacute;nico" aria-describedby="sizing-addon3">
+                                            <label>Dueño</label>
+                                            <div class="input-group">
+                                                <input type="text" class="form-control" name="cliente" title="Dueño"/>
+                                                <span class="input-group-btn">
+                                                    <a href="#" data-toggle="modal" data-target="#modelDueño" title="Buscar Dueño" class="btn btn-default" type="button">
+                                                        <i class="fa fa-search"></i>
+                                                    </a>
+                                                </span>
                                             </div>
                                         </div>
                                     </div>
