--- a/pacientes-ver.html
+++ b/pacientes-ver.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <h4 class="page-header">
-			<strong> EDITAR PACIENTE </strong> <br/>
+			<strong> VER PACIENTE </strong> <br/>
             <div class="css3gradient"></div>
         </h4>
     </div>
@@ -21,14 +21,14 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Nombre</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombre" name="nombre" value="fido">
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombre" name="nombre" value="fido" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Categoria</label>
-                                            <select class="form-control input-sm" title="Categoria" name="categoria">
+                                            <select class="form-control input-sm" title="Categoria" name="categoria" disabled>
                                                 <option>(Seleccione)</option>
                                                 <option selected>Perro</option>
                                                 <option>Gato</option>
@@ -40,7 +40,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Raza</label>
-                                            <select class="form-control input-sm" title="Raza" name="raza">
+                                            <select class="form-control input-sm" title="Raza" name="raza" disabled>
                                                 <option>(Seleccione)</option>
                                                 <option selected>Siberiano</option>
                                                 <option>Pitbull</option>
@@ -54,21 +54,21 @@
 									<div class="col-md-4">
                                         <div class="form-group">
                                             <label>Color</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Color" name="color" value="negro">
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Color" name="color" value="negro" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" value="07/09/1988">
+                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha" value="07/09/1988" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Peso</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Peso" name="peso" value="8">
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Peso" name="peso" value="8" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -77,7 +77,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Sexo</label>
-                                            <select class="form-control input-sm" title="Sexo" name="sexo">
+                                            <select class="form-control input-sm" title="Sexo" name="sexo" disabled>
                                                 <option>(Seleccione)</option>
                                                 <option>Hembra</option>
                                                 <option selected>Macho</option>
@@ -89,12 +89,59 @@
                                         <div class="form-group">
                                             <label>Dueño</label>
                                             <div class="input-group">
-                                                <input type="text" class="form-control" name="cliente" title="Dueño" value="Miguel Aranya Chaico"/>
+                                                <input type="text" class="form-control" name="cliente" title="Dueño" value="Miguel Aranya Chaico" disabled>
                                                 <span class="input-group-btn">
                                                     <a href="#" data-toggle="modal" data-target="#modelDueño" title="Buscar Dueño" class="btn btn-default" type="button">
                                                         <i class="fa fa-search"></i>
                                                     </a>
                                                 </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <strong>VACUNAS</strong>
+                            </div>
+                            <div class="panel-body"> 
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="panel panel-default">
+                                            <div class="panel-body">
+                                                <div class="table-responsive">
+                                                    <table class="table table-striped table-bordered table-hover" id="datable-grilla-bandeja-sol-usuario-ver">
+                                                        <thead>	
+                                                            <tr>
+                                                                <th class="text-center">Edad</th>
+                                                                <th class="text-center">Enfermedad</th>
+                                                                <th class="text-center">Nº Vacuna</th>
+                                                                <th class="text-center">Fecha</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr class="odd">
+                                                                <td>1</td>
+                                                                <td>Destemper</td> 
+                                                                <td>1</td>
+                                								<td>07-09-2012</td>
+                                                            </tr>
+                                                            <tr class="even">
+                                                                <td>2</td>
+                                                                <td>Parvovirus</td> 
+                                                                <td>2</td>
+                                								<td>07-10-2012</td>
+                                                            </tr>
+                                                            <tr class="odd">
+                                                                <td>2</td>
+                                                                <td>Destemper</td> 
+                                                                <td>3</td>
+                                								<td>07-11-2012</td>
+                                                            </tr> 
+                                                        </tbody>
+                                                    </table>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -108,17 +155,10 @@
     </div>
     <div> &nbsp; </div>
     <div class="row">
-        <div class="col-md-2 col-md-offset-4">
+        <div class="col-md-2 col-md-offset-5">
             <div class="form-group">
                 <label>&nbsp;</label>
-                <a href="javascript:cargar( 'pacientes.html' );" class="btn btn-sm btn-primary btn-block" title="Nuevo"><i class="fa fa-disk"></i>&nbsp; GUARDAR</a>
-                <span class="help-block"></span>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label>&nbsp;</label>
-                <a href="javascript:cargar( 'pacientes.html' );" class="btn btn-sm btn-primary btn-block" title="Editar"><i class="fa fa-back"></i>&nbsp; CANCELAR</a>
+                <a href="javascript:cargar( 'pacientes.html' );" class="btn btn-sm btn-primary btn-block" title="Cerrar"><i class="fa fa-disk"></i>&nbsp; CERRAR</a>
                 <span class="help-block"></span>
             </div>
         </div>
@@ -127,9 +167,28 @@
 
 
 <script>
-$(document).ready(function () {            
+$(document).ready(function () {
     $('#fecha').datepicker({
         format: "dd/mm/yyyy"
     });
+    
+    $('#datable-grilla-bandeja-sol-usuario-ver').dataTable({
+		lengthMenu: [[15, 25, 50, -1], [15, 25, 50, "All"]],
+		paging: true,
+		searching: true,
+		dom: '<"row" <"col-sm-5" f><"col-sm-1"><"col-sm-4" l><"#button-area-pacientes.col-sm-2">  >t<"row" <"col-sm-6" i><"col-sm-6" p> >',
+		language: {
+			info:  "Registros: _START_ - _END_ de _TOTAL_ registros",
+			lengthMenu: "_MENU_  registros por p&aacute;gina",
+			paginate: {
+				first:      "Primero",
+				last:       "&Uacute;ltimo",
+				next:       "Siguiente",
+				previous:   "Anterior"
+			},
+			search: "Buscar "
+		}
+	});
+	$( "#button-area-pacientes" ).append('<p style="text-align: right;"><a href="#" title="Exportar a EXCEL" style="font-size: 24px;"><i style="color:#0B6138;" class="fa fa-file-excel-o"></i></a></p>');
 });
 </script>
