--- a/pacientes.html
+++ b/pacientes.html
@@ -50,7 +50,7 @@
                                 <th class="text-center">Categor&iacute;a</th>
                                 <th class="text-center">Raza</th>
                                 <th class="text-center">Edad</th>
-                                <th class="text-center">Estado</th>
+                                <th class="text-center">Activo</th>
                                 <th class="text-center">Ver</th>
                             </tr>
                         </thead>
@@ -63,9 +63,11 @@
                                 <td>Perro</td> 
                                 <td>Chow chow</td>
 								<td>2</td>
-                                <td class="text-center">Activo</td>
+                                <td class="text-center">
+                                    <input type="checkbox" name="checkeado" checked>
+                                </td>
 								<td class="text-center">
-									<a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+									<a href="javascript:cargar('pacientes-ver.html')" title="Ver Paciente"><i class="fa fa-eye iconEyeColor"></i></a>
 								</td>
                             </tr>
                             <tr class="even">
@@ -76,9 +78,11 @@
                                 <td>Gato</td> 
                                 <td>Angora</td>
                                 <td>1</td>
-                                <td class="text-center">Activo</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox" name="checkeado" checked>
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('pacientes-ver.html')" title="Ver Paciente"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr>
                             <tr class="odd">
@@ -89,9 +93,11 @@
                                 <td>Perro</td> 
                                 <td>Siberiano</td>
                                 <td>3</td>
-                                <td class="text-center">Activo</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox" name="checkeado" checked>
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('pacientes-ver.html')" title="Ver Paciente"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr> 
                         </tbody>
