envio de parte 2

--- a/productos-ver.html
+++ b/productos-ver.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <h4 class="page-header">
-			<strong> EDITAR PRODUCTO </strong> <br/>
+			<strong> VER PRODUCTO </strong> <br/>
             <div class="css3gradient"></div>
         </h4>
     </div>
@@ -21,14 +21,14 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Nombre</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombre" value="Canex">
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombre" value="Canex" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Categor&iacute;a</label>
-                                            <select class="form-control input-sm" title="Categor&iacute;a">
+                                            <select class="form-control input-sm" title="Categor&iacute;a" disabled>
                                                 <option>(Seleccione)</option>
                                                 <option selected>Desparasitantes</option>
                                                 <option>Vacunas</option>
@@ -42,7 +42,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label>Unidad de Medida</label>
-                                            <select class="form-control input-sm" title="Unidad de Medida">
+                                            <select class="form-control input-sm" title="Unidad de Medida" disabled>
                                                 <option>(Seleccione)</option>
                                                 <option selected>UND</option>
                                                 <option>Kg</option>
@@ -56,7 +56,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label>Descripci&oacute;n Larga</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Descripci&oacute;n larga" value="Buen desparasitante para parasitos gastrointestinales">
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Descripci&oacute;n larga" value="Buen desparasitante para parasitos gastrointestinales" disabled>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -65,7 +65,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label>Observaciones</label>
-                                            <textarea class="form-control input-sm" placeholder="" title="Observaciones" rows="3">Puede tener efectos secundarios.</textarea>
+                                            <textarea class="form-control input-sm" placeholder="" title="Observaciones" rows="3" disabled>Puede tener efectos secundarios.</textarea>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
@@ -79,17 +79,10 @@
     </div>
     <div> &nbsp; </div>
     <div class="row">
-        <div class="col-md-2 col-md-offset-4">
+        <div class="col-md-2 col-md-offset-5">
             <div class="form-group">
                 <label>&nbsp;</label>
-                <a href="javascript:cargar( 'productos.html' );" class="btn btn-sm btn-primary btn-block" title="Nuevo"><i class="fa fa-disk"></i>&nbsp; GUARDAR</a>
-                <span class="help-block"></span>
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <label>&nbsp;</label>
-                <a href="javascript:cargar( 'productos.html' );" class="btn btn-sm btn-primary btn-block" title="Editar"><i class="fa fa-back"></i>&nbsp; CANCELAR</a>
+                <a href="javascript:cargar( 'productos.html' );" class="btn btn-sm btn-primary btn-block" title="Nuevo"><i class="fa fa-disk"></i>&nbsp; CERRAR</a>
                 <span class="help-block"></span>
             </div>
         </div>
