--- a/productos-nuevo.html
+++ b/productos-nuevo.html
@@ -20,78 +20,53 @@
                                 <div class="row">
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>Tipo Documento</label>
-                                            <select class="form-control input-sm" title="Tipo Documento" name="tipoDocumento">
+                                            <label>Nombre</label>
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombre">
+                                            <span class="help-block"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label>Categor&iacute;a</label>
+                                            <select class="form-control input-sm" title="Categor&iacute;a">
                                                 <option selected>(Seleccione)</option>
-                                                <option>DNI</option>
-                                                <option>CE</option>
-                                                <option>LE</option>
+                                                <option>Desparasitantes</option>
+                                                <option>Vacunas</option>
+                                                <option>Suplementos</option>
+                                                <option>Antibi&oacute;ticos</option>
+                                                <option>Antiinflamatorios</option>
                                             </select>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <label>N&uacute;mero Documento</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="N&uacute;mero Documento" name="nDocumento">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                </div>
-								<div class="row">
-									<div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Nombres</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Nombres" name="nombres">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Apellido Paterno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Paterno" name="apePaterno">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Apellido Materno</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Apellido Materno" name="apeMaterno">
+                                            <label>Unidad de Medida</label>
+                                            <select class="form-control input-sm" title="Unidad de Medida">
+                                                <option selected>(Seleccione)</option>
+                                                <option>UND</option>
+                                                <option>Kg</option>
+                                                <option>lt</option>
+                                            </select>
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-12">
                                         <div class="form-group">
-                                            <label>Direcci&oacute;n</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Direcci&oacute;n" name="direccion">
-                                            <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Fecha de Nacimiento</label>
-                                            <input class="form-control input-sm" placeholder="" title="Fecha de Nacimiento" name="fecha" id="fecha">
+                                            <label>Descripci&oacute;n Larga</label>
+                                            <input type="text" class="form-control input-sm" placeholder="" title="Descripci&oacute;n larga">
                                             <span class="help-block"></span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-md-4">
+                                    <div class="col-md-12">
                                         <div class="form-group">
-                                            <label>Tel&eacute;fono</label>
-                                            <input type="text" class="form-control input-sm" placeholder="" title="Tel&eacute;fono" name="telefono">
+                                            <label>Observaciones</label>
+                                            <textarea class="form-control input-sm" placeholder="" title="Observaciones" rows="3"></textarea>
                                             <span class="help-block"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="form-group">
-                                            <label>Email</label>
-                                            <div class="input-group input-group-sm">
-                                                <span class="input-group-addon" id="sizing-addon3">@</span>
-                                                <input type="text" class="form-control" placeholder="Correo electr&oacute;nico" aria-describedby="sizing-addon3">
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
