--- a/productos.html
+++ b/productos.html
@@ -49,8 +49,7 @@
                                 <th class="text-center">Nom. Producto</th>
                                 <th class="text-center">Descripción</th>
                                 <th class="text-center">Categoría</th>
-                                <th class="text-center">Stock</th>
-                                <th class="text-center">Estado</th>
+                                <th class="text-center">Activo</th>
                                 <th class="text-center">Ver</th>
                             </tr>
                         </thead>
@@ -61,11 +60,12 @@
                                 </td>
                                 <td>Producto 1</td>
                                 <td></td> 
-                                <td></td>
-								<td></td>
-                                <td class="text-center">Activo</td>
+								<td>Desparasitantes</td>
+                                <td class="text-center">
+                                    <input type="checkbox" name="checkeado" checked>
+                                </td>
 								<td class="text-center">
-									<a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+									<a href="javascript:cargar('productos-ver.html')" title="Ver Producto"><i class="fa fa-eye iconEyeColor"></i></a>
 								</td>
                             </tr>
                             <tr class="even">
@@ -74,11 +74,12 @@
                                 </td>
                                 <td>Producto 2</td>
                                 <td></td> 
-                                <td></td>
-                                <td></td>
-                                <td class="text-center">Activo</td>
+                                <td>Vacunas</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox" name="checkeado" checked>
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('productos-ver.html')" title="Ver Producto"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr>
                             <tr class="odd">
@@ -87,11 +88,12 @@
                                 </td>
                                 <td>Producto 3</td>
                                 <td></td> 
-                                <td></td>
-                                <td></td>
-                                <td class="text-center">Activo</td>
+                                <td>Antibi&oacute;ticos</td>
                                 <td class="text-center">
-                                    <a href="#" title="Ver Cliente"><i class="fa fa-eye iconEyeColor"></i></a>
+                                    <input type="checkbox" name="checkeado" checked>
+                                </td>
+                                <td class="text-center">
+                                    <a href="javascript:cargar('productos-ver.html')" title="Ver Producto"><i class="fa fa-eye iconEyeColor"></i></a>
                                 </td>
                             </tr> 
                         </tbody>
